kubernetes/applications/bikepal/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bikepal-api
  namespace: bikepal
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: bikepal-api
  ports:
    - name: http
      port: 8080
      targetPort: http
